sources = files(
    'api/Login.vala',
    'api/Lights.vala',
    'api/Rooms.vala',

    'model/JsonObject.vala',
    'model/Light.vala',
    'model/Room.vala',

    'Views/GroupsView.vala',
    'Views/LightsView.vala',

    'widgets/Light.vala',
    'widgets/Room.vala',
    'widgets/Popover.vala',
    'widgets/Scale.vala',
    'widgets/ViewSelector.vala',

    'Services/Utils.vala',
    'Services/RateLimiter.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)