sources = files(
    'api/Login.vala',
    'api/Lights.vala',
    'api/Rooms.vala',

    'Model/JsonObject.vala',
    'Model/Light.vala',
    'Model/Room.vala',

    'Views/GroupsView.vala',
    'Views/LightsView.vala',

    'Widgets/Light.vala',
    'Widgets/Room.vala',
    'Widgets/Popover.vala',
    'Widgets/Scale.vala',
    'Widgets/ViewSelector.vala',
    'Widgets/ControllerLarge.vala',

    'Services/Utils.vala',
    'Services/RateLimiter.vala',

    'Application.vala',
    'Main.vala',
    'Window.vala'
)